gloo-jwt-claim-routing/resources/echoapp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echoapp
  name: echoapp
  namespace: default
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: echoapp
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: echoapp
    stage: primary
  name: primary-pod
spec:
  containers:
  - args:
    - -text=primary
    - -listen=:8080
    image: hashicorp/http-echo
    imagePullPolicy: Always
    name: primary-pod
    resources:
      requests:
        cpu: 100m
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubernetes.io/limit-ranger: 'LimitRanger plugin set: cpu request for container
      canary-pod'
  creationTimestamp: "2020-03-25T13:09:04Z"
  labels:
    app: echoapp
    stage: canary
  name: canary-pod
  namespace: default
  resourceVersion: "61992643"
  selfLink: /api/v1/namespaces/default/pods/canary-pod
  uid: cd568170-6e99-11ea-9e92-42010a8a015b
spec:
  containers:
  - args:
    - -text=canary
    - -listen=:8080
    image: hashicorp/http-echo
    imagePullPolicy: Always
    name: canary-pod
    resources:
      requests:
        cpu: 100m
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
  terminationGracePeriodSeconds: 30
