gloo-jwt-claim-routing/resources/echoapp-jwt-claims-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echoapp
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
        headers:
        - name: x-group
          value: pets
      routeAction:
        single:
          upstream:
            name: echoapp
            namespace: gloo-system
          subset:
            values:
              stage: canary
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: echoapp
            namespace: gloo-system
          subset:
            values:
              stage: primary
    options:
      jwt:
        providers:
          solo:
            claimsToHeaders:
            - claim: svc
              header: x-group
            issuer: solo.io
            jwks:
              local:
                key: |
                  -----BEGIN PUBLIC KEY-----
                  MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAx7s5/6vgGPoW1PKkSMka
[...]
                  TQIDAQAB
                  -----END PUBLIC KEY-----
